# sinai

./: .flake8  .pre-commit-config.yaml  Pipfile  example.py  pyproject.toml  setup.py
sinai/: __init__.py  types.py
sinai/adaptors/: api.py  memory.py
sinai/metrics/: __init__.py
sinai/models/: rule.py
sinai/rules/: __init__.py  base.py
sinai/sources/: base.py
sinai/stores/: base.py  mongo.py
tests/adaptors/: test_mongo.py
tests/models/: test_monitor.py  test_rule.py  test_source.py  test_store.py
