[build-system]
requires = [
    "hatchling>=1.3.1",
]
build-backend = "hatchling.build"

[project]
name = "sinai"
description = "Monitor anything e.g. application state, data integrity."
readme = "README.md"
license = "MIT"
authors = [
    { name = "andymason,zeth", email = "" },
]
dynamic = [
    "version",
]


[project.urls]
Homepage = "https://github.com/SinAI-monitoring/sinai"

[tool.hatch.version]
path = "sinai/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/sinai",
]
